add js .find(p).toggle(); to allow clicking on the boxes to toggle the prompt

--- a/flashcard.html
+++ b/flashcard.html
@@ -17,7 +17,7 @@
       <p>Click the word to find the definition!</p>
 
       <div class="row">
-        <div class="col-lg-3" id="js">
+        <div class="special col-lg-3" id="js">
           <h3>JavaScript (JS)</h3>
           <p >an object-oriented computer programming language commonly used to create interactive effects within web browsers.</p>
         </div>
